--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.2",
     "uuidv4": "^6.2.5",
     "web-vitals": "^0.2.4"
