--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-whatsapp": "^0.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.2",
