--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-datepicker": "^3.4.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
