--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.0",
     "react-whatsapp": "^0.2.0",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.2",
     "timeago.js": "^4.0.2",
